--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <span class="logo">
+                <img src="images/logo.png" alt="logo">
+                <h5>Master Card</h5>
+            </span>
+            <img src="images/chip.png" alt="chip" class="chip">
+        </header>
+        <div class="cardDetails">
+            <div class="nameNumber">
+                <h6>Card Number</h6>
+                <h5 class="number">6040 5050 7070 6655</h5>
+                <h5 class="name">Anna Selivanova</h5>
+            </div>
+            <div class="validDate">
+                <h6>Valid Thru</h6>
+                <h5>04/25</h5>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
