--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nameNumber">
                 <h6>Card Number</h6>
                 <h5 class="number">6040 5050 7070 6655</h5>
-                <h5 class="name">Anna Selivanova</h5>
+                <h5 class="name">Inga Selivanova</h5>
             </div>
             <div class="validDate">
                 <h6>Valid Thru</h6>
