--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <span class="logo">
                 <img src="images/logo.png" alt="logo">
-                <h5>Master Card</h5>
+                <h5>Master Card UI Design</h5>
             </span>
             <img src="images/chip.png" alt="chip" class="chip">
         </header>
